GMS-54 Major and minor Sonar issue fixes